@@ -6,6 +6,7 @@ Bugfixes:
 * Poster image display problem with profile pics < 32 x 32 #595
 * Deleting the current profile pic/cover doesn't update cache #590 [In Progress]
 * Show latest comments instead of oldest comments #603
+* Post owner can not delete others comments #607
 
 General:
 
